--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "egxprod",
   "version": "1.0.0",
   "description": "An All-In-One Productivity Application!.",
-  "author": "Ethan G. (https://egxworld.net)",
+  "author": "Ethan G. (https://egxo.dev)",
   "license": "MIT",
   "private": true,
   "scripts": {
