--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "egxprod",
+  "name": "xprod",
   "version": "1.0.0",
   "description": "An All-In-One Productivity Application!.",
   "author": "Ethan G. (https://egxo.dev)",
