--- a/package.json
+++ b/package.json
@@ -2,15 +2,29 @@
   "name": "xprod",
   "version": "1.0.0",
   "description": "An All-In-One Productivity Application!.",
+  "homepage": "https://xprod.vercel.app",
   "author": "Ethan G. (https://egxo.dev)",
   "license": "MIT",
   "private": true,
+  "keywords": [
+    "typesctipt",
+    "nextjs",
+    "react",
+    "tailwindcss",
+    "vercel"
+  ],
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "pnpm run lint && next build",
     "start": "next start",
-    "lint": "next lint",
+    "next-lint": "next lint",
+    "lint": "eslint --cache --cache-location .next/cache/eslint/",
+    "lint-nocache": "eslint",
+    "lint:fix": "eslint --fix",
+    "lint-debug-config": "eslint --debug eslint.config.ts",
+    "lint-print-config": "eslint --print-config eslint.config.ts",
+    "lint-inspect-config": "eslint --inspect-config eslint.config.ts",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
@@ -26,35 +40,39 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "2.46.1",
+    "@supabase/supabase-js": "2.48.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "encoding": "^0.1.13",
-    "lucide-react": "^0.456.0",
-    "next": "15.0.3",
-    "next-themes": "^0.4.3",
-    "react": "^18.3.1",
-    "react-day-picker": "^9.3.0",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.49.3",
-    "react-hot-toast": "^2.4.1",
+    "lucide-react": "^0.474.0",
+    "next": "15.1.6",
+    "next-themes": "^0.4.4",
+    "react": "^19.0.0",
+    "react-day-picker": "^9.5.1",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^22.9.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "15.0.3",
-    "eslint-config-prettier": "^9.1.0",
-    "postcss": "^8.4.49",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.19.0",
+    "@types/eslint__eslintrc": "^2.1.2",
+    "@types/node": "^22.13.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.19.0",
+    "eslint-config-next": "15.1.6",
+    "eslint-config-prettier": "^10.0.1",
+    "jiti": "^2.4.2",
+    "postcss": "^8.5.1",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.3"
   }
 }
