--- a/package.json
+++ b/package.json
@@ -41,10 +41,13 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "2.48.1",
+    "akar-icons": "^1.9.31",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "encoding": "^0.1.13",
+    "jsdom": "^26.0.0",
     "lucide-react": "^0.474.0",
+    "motion": "^12.4.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
@@ -54,12 +57,14 @@
     "react-hot-toast": "^2.5.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.19.0",
     "@types/eslint__eslintrc": "^2.1.2",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
